--- a/canvas/miaov_tag/miaov_demo.html
+++ b/canvas/miaov_tag/miaov_demo.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html lang="zh">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>JavaScript 实现的 3D 标签云效果 - www.miaov.com - 妙味课堂</title>
+<meta charset="utf-8" />
+<title>JavaScript 实现的 3D 标签云效果 </title>
 <link rel="stylesheet" type="text/css" href="miaov_style.css" />
 
 </head>
