--- a/js/jquery全屏滚动插件/demo.html
+++ b/js/jquery全屏滚动插件/demo.html
@@ -125,7 +125,7 @@
         </div>
     </div>
 
-    <script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script src="//apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="jquery.pageSwitch.js"></script>
     <script>
         $("#container").PageSwitch({
